2019-08-30  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-05-25  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/i386/pr59874-3.c: Use the spelling of popcnt
	expected for Darwin.

2019-08-30  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-05-25  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/i386/pr82659-3.c: Require alias support.

2019-08-30  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-05-24  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/i386/pconfig-1.c: Scan for the string in the generated
	code, not in comments or miscellaneous directives.
	* gcc.target/i386/wbinvd-1.c: Likewise.
	* gcc.target/i386/wbnoinvd-1.c: Likewise.
	* gcc.target/i386/pr66819-3.c: Specifically, check that there is no
	call to "bar".
	* gcc.target/i386/pr66819-4.c: Likewise.
	* gcc.target/i386/pr82662.c

2019-08-30  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-05-24  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/i386/pr67985-2.c: Adjust label checks for
	Darwin.
	* gcc.target/i386/pr77881.c: Likewise.

2019-08-30  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-05-24  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/i386/pr70738-7.c: Likewise.
	* gcc.target/i386/pr24414.c: Likewise.

2019-08-30  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-05-23  Iain Sandoe  <iain@sandoe.co.uk>

	PR rtl-optimisation/64895
	* gcc.target/i386/fuse-caller-save-rec.c: Remove XFAILs.
	* gcc.target/i386/fuse-caller-save.c: Likewise.
	* gcc.target/i386/fuse-caller-save-xmm.c: Adjust tests for
	PIC cases, remove XFAILs.

2019-08-30  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2019-07-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/91108
	* gcc.dg/tree-ssa/pr91091-1.c: New testcase.
	* gcc.dg/tree-ssa/ssa-fre-78.c: Likewise.

2019-08-30  Segher Boessenkool  <segher@kernel.crashing.org>

	Backport from trunk